--- a/css/index.css
+++ b/css/index.css
@@ -382,6 +382,62 @@ td {
     transform: rotate(1turn);
   }
 }
+@-moz-keyframes footer-heart-beat {
+  0% {
+    transform: scale(1);
+  }
+  15% {
+    transform: scale(1.2);
+  }
+  30% {
+    transform: scale(1);
+  }
+  45% {
+    transform: scale(1.2);
+  }
+}
+@-webkit-keyframes footer-heart-beat {
+  0% {
+    transform: scale(1);
+  }
+  15% {
+    transform: scale(1.2);
+  }
+  30% {
+    transform: scale(1);
+  }
+  45% {
+    transform: scale(1.2);
+  }
+}
+@-o-keyframes footer-heart-beat {
+  0% {
+    transform: scale(1);
+  }
+  15% {
+    transform: scale(1.2);
+  }
+  30% {
+    transform: scale(1);
+  }
+  45% {
+    transform: scale(1.2);
+  }
+}
+@keyframes footer-heart-beat {
+  0% {
+    transform: scale(1);
+  }
+  15% {
+    transform: scale(1.2);
+  }
+  30% {
+    transform: scale(1);
+  }
+  45% {
+    transform: scale(1.2);
+  }
+}
 .container {
   display: flex;
   overflow: hidden; /* !!! */
@@ -597,6 +653,7 @@ td {
   margin: 0 0.3rem;
   font-size: 1em;
   color: #f00;
+  animation: footer-heart-beat 1.2s infinite;
 }
 .footer-inner {
   position: relative;
@@ -770,10 +827,6 @@ td {
 .sidebar-ov-state__a--count {
   font-weight: 600;
   color: #333;
-}
-.sidebar-ov-cc {
-  padding-top: 0.5rem;
-  text-align: center;
 }
 .sidebar-reading {
   overflow: hidden;
@@ -1047,6 +1100,12 @@ td {
 }
 .post-header-meta-update {
   color: #49b1f5;
+}
+.post-header-meta-reading-time {
+  color: #49b1f5;
+}
+.post-header-meta-word-count {
+  color: #666;
 }
 .post-header-meta-reading-count {
   color: #fc6423;
@@ -1487,6 +1546,9 @@ td {
 .post-header-title .external-link i {
   font-size: 0.7em;
 }
+a.fancybox {
+  cursor: zoom-in;
+}
 .zoom-image-mask {
   position: fixed;
   top: 0;
@@ -1511,6 +1573,11 @@ td {
   box-sizing: content-box;
   cursor: zoom-out;
   will-change: transform;
+}
+.lazyload.block {
+  box-sizing: content-box;
+  min-width: 30px;
+  min-height: 30px;
 }
 .copy-button {
   position: absolute;
