--- a/css/index.css
+++ b/css/index.css
@@ -614,7 +614,7 @@ td {
   width: 100%;
   height: 100%;
   background-color: rgba(45,46,48,0.7);
-  background: url("/uploads/avatar.png") no-repeat center/cover;
+  background: url("/uploads/avatar.jpg") no-repeat center/cover;
 }
 .header-info::before {
   content: '';
